load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_missing_pkgs", "bzlformat_pkg")
load(
    "@cgrindel_bazel_starlib//updatesrc:defs.bzl",
    "updatesrc_update_all",
)
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    "@cgrindel_rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "integration_test_utils",
)

bzlformat_pkg(name = "bzlformat")

bzlformat_missing_pkgs(
    name = "bzlformat_missing_pkgs",
)

updatesrc_update_all(
    name = "update_all",
    targets_to_run = [
        ":bzlformat_missing_pkgs_fix",
    ],
)

# MARK: - Related to Integration Tests

bzl_library(
    name = "bazel_versions",
    srcs = ["bazel_versions.bzl"],
    visibility = ["//:__subpackages__"],
)

# Provides the *.bazlerc files for the example workspace integration tests.
filegroup(
    name = "shared_bazelrc_files",
    srcs = glob(["*.bazelrc"]),
    visibility = ["//:__subpackages__"],
)

# The example workspaces use local_repository to reference this workspace.
# This target collects all of the files needed for rules_spm to work in the
# child workspaces.
filegroup(
    name = "local_repository_files",
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "//spm:all_files",
        "//spm/private:all_files",
        "//spm/private/modulemap_parser:all_files",
    ],
    visibility = ["//:__subpackages__"],
)

test_suite(
    name = "all_integration_tests",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = [
        "//examples:integration_tests",
    ],
    visibility = ["//:__subpackages__"],
)
