# _SHARED_SCRIPTS=[""]

sh_binary(
    name = "simple_test",
    srcs = ["do_bazel_test.sh"],
    args = [
        "--example",
        "simple",
    ],
)

sh_binary(
    name = "do_incompatible_xcode_use_dev_dir_attr_test",
    srcs = ["do_incompatible_xcode_use_dev_dir_attr_test.sh"],
)

# sh_test(
#     name = "incompatible_xcode_use_dev_dir_attr_test",
#     srcs = ["incompatible_xcode_use_dev_dir_attr_test.sh"],
#     data = [":do_incompatible_xcode_use_dev_dir_attr_test"],
#     local = True,
#     deps = ["@bazel_tools//tools/bash/runfiles"],
# )

# sh_test(
#     name = "incompatible_xcode_use_dev_dir_attr_test",
#     srcs = ["do_incompatible_xcode_use_dev_dir_attr_test.sh"],
#     # data = ["//:simple_example"],
#     local = True,
# )
