# _SHARED_SCRIPTS=[""]

BAZEL_TEST_EXAMPLES = [
    "simple",
    "simple_revision",
    "simple_with_binary",
    "local_package",
    "vapor",
    "ios_sim",
]

[
    sh_binary(
        name = example + "_test",
        srcs = ["do_bazel_test.sh"],
        args = [
            "--example",
            example,
        ],
    )
    for example in BAZEL_TEST_EXAMPLES
]

sh_binary(
    name = "do_incompatible_xcode_use_dev_dir_attr_test",
    srcs = ["do_incompatible_xcode_use_dev_dir_attr_test.sh"],
)

# sh_test(
#     name = "incompatible_xcode_use_dev_dir_attr_test",
#     srcs = ["incompatible_xcode_use_dev_dir_attr_test.sh"],
#     data = [":do_incompatible_xcode_use_dev_dir_attr_test"],
#     local = True,
#     deps = ["@bazel_tools//tools/bash/runfiles"],
# )

# sh_test(
#     name = "incompatible_xcode_use_dev_dir_attr_test",
#     srcs = ["do_incompatible_xcode_use_dev_dir_attr_test.sh"],
#     # data = ["//:simple_example"],
#     local = True,
# )
