load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        "//spm/internal:repositories",
    ],
)

bzl_library(
    name = "spm",
    srcs = ["spm.bzl"],
    deps = [
        "//spm/internal:package_descriptions",
        "//spm/internal:packages",
        "//spm/internal:platforms",
        "//spm/internal:providers",
        "//spm/internal:references",
        "//spm/internal:repositories",
        "//spm/internal:repository_utils",
        "//spm/internal:spm_archive",
        "//spm/internal:spm_clang_library",
        "//spm/internal:spm_common",
        "//spm/internal:spm_package",
        "//spm/internal:spm_package_info_utils",
        "//spm/internal:spm_repositories",
        "//spm/internal:spm_swift_binary",
        "//spm/internal:spm_swift_library",
        "//spm/internal:spm_system_library",
        "//spm/internal:spm_versions",
    ],
)
