load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        "//spm/private:repositories",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//spm/private:package_descriptions",
        "//spm/private:packages",
        "//spm/private:platforms",
        "//spm/private:providers",
        "//spm/private:references",
        "//spm/private:repositories",
        "//spm/private:repository_utils",
        "//spm/private:spm_archive",
        "//spm/private:spm_clang_library",
        "//spm/private:spm_common",
        "//spm/private:spm_package",
        "//spm/private:spm_package_info_utils",
        "//spm/private:spm_repositories",
        "//spm/private:spm_swift_binary",
        "//spm/private:spm_swift_library",
        "//spm/private:spm_system_library",
        "//spm/private:spm_versions",
    ],
)

# TODO: Add backward compatible spm.bzl?

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
