load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bazel_tools_repo_http",
    srcs = ["@bazel_tools//tools/build_defs/repo:http.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "bazel_tools_repo_utils",
    srcs = ["@bazel_tools//tools/build_defs/repo:utils.bzl"],
    visibility = ["//spm:__subpackages__"],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//spm:__subpackages__"],
    deps = [
        ":bazel_tools_repo_http",
        ":bazel_tools_repo_utils",
        "//spm/private:spm_autoconfiguration",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//spm/private:bazel_build_declarations",
        "//spm/private:bazel_clang_library",
        "//spm/private:build_declarations",
        "//spm/private:package_descriptions",
        "//spm/private:packages",
        "//spm/private:platforms",
        "//spm/private:providers",
        "//spm/private:references",
        "//spm/private:repository_files",
        "//spm/private:repository_utils",
        "//spm/private:spm_archive",
        "//spm/private:spm_build_declarations",
        "//spm/private:spm_clang_library",
        "//spm/private:spm_common",
        "//spm/private:spm_package",
        "//spm/private:spm_package_info_utils",
        "//spm/private:spm_repositories",
        "//spm/private:spm_swift_binary",
        "//spm/private:spm_swift_library",
        "//spm/private:spm_system_library",
        "//spm/private:spm_versions",
        "//spm/private:swift_toolchains",
    ],
)

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
