load(":package_descriptions_tests.bzl", "package_descriptions_test_suite")
load(":providers_tests.bzl", "providers_test_suite")
load(":files_tests.bzl", "files_test_suite")
load(":packages_tests.bzl", "packages_test_suite")

package_descriptions_test_suite()

providers_test_suite()

files_test_suite()

packages_test_suite()
