load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "complex",
    srcs = ["main.swift"],
    visibility = ["//swift:__subpackages__"],
    deps = [
        "@swift_pkgs//swift-log:Logging",
        "@swift_pkgs//swift-nio:NIO",
    ],
)

sh_test(
    name = "complex_test",
    srcs = ["complex_test.sh"],
    data = [":complex"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
