load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "simple",
    srcs = ["main.swift"],
    visibility = ["//swift:__subpackages__"],
    deps = [
        "@swift_pkgs//Firebase:FirebaseAnalytics",
        "@swift_pkgs//libwebp",
        "@swift_pkgs//swift-log:Logging",
    ],
)

sh_test(
    name = "simple_test",
    srcs = ["simple_test.sh"],
    data = [":simple"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Used to test building with a different version of Xcode. In this case, this
# is not the latest version of Xcode. Run the following to test with this
# version:
#
#    bazel test --xcode_version_config=//:host_xcodes //...
#
# For more information on how this all works, see
# https://www.smileykeith.com/2021/03/08/locking-xcode-in-bazel/

xcode_version(
    name = "version12_4_0_12D4e",
    aliases = ["12D4e"],
    default_ios_sdk_version = "14.4",
    default_macos_sdk_version = "11.1",
    default_tvos_sdk_version = "14.3",
    default_watchos_sdk_version = "7.2",
    version = "12.4.0.12D4e",
)

xcode_config(
    name = "host_xcodes",
    default = ":version12_4_0_12D4e",
    versions = [
        ":version12_4_0_12D4e",
    ],
)
